--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: copy file via ssh key password
+    - name: copy file via ssh key
       uses: SreeramPrabhakar/scp-action@master
       with:
         host: ${{ secrets.HOST }}
