--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,11 +6,10 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
     - name: copy file via ssh key
       uses: SreeramPrabhakar/scp-action@master
       with:
-        host: ${{ secrets.HOST }}
+        host: ${{ secrets.HOSTNAME }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
